--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -91,6 +91,7 @@
         </div>
     </section>
     <script src="https://unpkg.com/react@15.3.1/dist/react.min.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.1/dist/react-dom.min.js"></script>
     <script src="../dist/marko-vdom-umd.js"></script>
     <script src="../node_modules/lodash/lodash.js"></script>
     <script src="../node_modules/benchmark/benchmark.js"></script>
